Modifying the restaurant and the order item adding more controllers for the front end